# awwtools

./: .clang-format  .editorconfig  .env  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.ded  CMakeLists.txt.ded.apple  LICENSE  README.md  TODO.md  aww-app-design.md  aww-app-ideas.md  clipboard-4e5d3c98-16f4-42bc-8828-d847c65012c5.txt  cmake-a-create-clang.cmd  cmake-a-create.cmd  cmake-a-create.sh  cmake-b-build  cmake-b-build-clang.cmd  cmake-b-build-release.cmd  cmake-b-build.cmd  cmake-b-build.sh  cmake-b-debug.cmd  cmake-b-debug.sh  cmake-b-ninja.cmd  cmake-b-release.cmd  cmake-b-release.sh  cmake-b.cmd  cmake-b.sh  cmake-r-run-release.cmd  cmake-r-run.cmd  gdb-gui.sh  go.mod  next-step.md  read-env-file.cmd  read-env-file.sh  recommendations-01.md  recommendations-02.md  webview-webview.md
.github/instructions/: cpp.instructions.md
.github/workflows/: ci.yml
app/: aww-api.cpp  aww-app.cpp  aww-create.cpp  aww-date.cpp  aww-git-open.cpp  aww-guid.cpp  aww-open.cpp  aww-run.cpp  aww-stuff.cpp  aww-tag.cpp  aww-term.cpp  aww-toast.cpp  aww-web.cpp  aww.cpp  main.cpp
aww-create-aww/templates/: template-awwscript.ps1  template-class.ts  template-interface.cs  template-interface.ts  template-main.c  template-main.cpp  template-main.scala  template-powershell.cmd  template-pwsh.cmd  template-pwsh.sh  template-sbt.h  template-stb.h  template.cs  template.excalidraw  template.h  template.hpp  template.md  template.org  template.ps1  template.scala  template.sh  template.txt
aww-run-aww/: readme.md
aww-run-aww/aww-scripts/: readme.md
aww-scripts/: cmake-build-clang.cmd  cmake-build.cmd  cmake-build.sh  cmake-init-clang.cmd  cmake-init.cmd  cmake-init.sh  readme.md
cmake/: Misc.cmake  Warnings.cmake
dead_code/: notes.md
dead_code/2025-07-04/: app_aww-tee.cpp.md  internal_aww-tee.hpp.md
dev-doc/: cpp-reference.md
dev-experiments/: aww-app.md  play_mp3_file.md  winapi-window.md
dev-experiments-unit-tests/: output-aww-create.md  output-aww-open.md
dev-experiments/add-to-system-path/: add-to-system-path.md
dev-experiments/aww-app-example/: app.js  appmanifest.json  index.html
dev-experiments/aww-app-markdown/: app.js  appmanifest.json
dev_setup/: dev_setup.md  dev_setup.prompt.md
doc-dev-articles/: 2023-12-02-aww-tools-structured-logging.md  idea.md
docs/: CNAME  index.html
docs/css/: style.css
documentation/: TODO.md  aww-app-design.md  aww-app-ideas-similar-software.md  aww-app-ideas.md  aww-comm.templates.md  aww-macro-ideas.md
documentation/dev-doc/: cross_platform_filesystem_path_handling_in_cpp20.md
documentation/dev-experiments/: aww-remind.md  wx-widgets-always-on-top.md
documentation/dev-experiments-unit-tests/: output-aww-git-open.md
documentation/lua-samples/: argy.lua  fibonacci.lua  notes.lua  notes.md  twosum.lua
documentation/saved-docs/: How can I tell whether my console program was launched from Explorer or from a command prompt.md
documentation/task_scoped_command_wrappers_manual/: examples.ps1  examples.py  examples.sh  task_scoped_bash_command_wrappers_manual.md  task_scoped_command_wrappers_manual_index.md  task_scoped_powershell_command_wrappers_manual.md  task_scoped_python_command_wrappers_manual.md
include/: aw-datetime.hpp  aww-app-manifest.hpp  aww-banner.hpp  aww-common.hpp  aww-inspiration.hpp  aww-toast-popup.hpp  os-exec.hpp
include/internal/: aww-api.hpp  aww-create.hpp  aww-date.hpp  aww-git-open.hpp  aww-guid.hpp  aww-open.hpp  aww-run.hpp  aww-tag.hpp  aww-tee.hpp  aww-term.hpp  aww-toast.hpp  aww-web.hpp  aww.hpp
src/: aw-datetime.cpp  aww-app-manifest.cpp  aww-banner-linux.cpp  aww-banner-windows.cpp  aww-banner-windows.cpp.md  aww-common-apple.cpp  aww-common-apple.cpp.ded  aww-common-linux.cpp  aww-common-unix.cpp  aww-common-unknown.cpp  aww-common-windows.cpp  aww-common.cpp  aww-common.hpp  aww-inernal-aww-tag.cpp  aww-inspiration.cpp  aww-inspiration.hpp  aww-spdlog-configuration.hpp  example.cpp  os-exec.cpp
src/internal/: aww-api.cpp  aww-api.hpp  aww-create.cpp  aww-create.hpp  aww-date.cpp  aww-date.hpp  aww-git-open.cpp  aww-git-open.hpp  aww-guid.cpp  aww-guid.hpp  aww-open.cpp  aww-run.cpp  aww-run.hpp  aww-stuff.cpp  aww-stuff.hpp  aww-tag.cpp  aww-tag.hpp  aww-tee.cpp  aww-term.cpp  aww-toast.cpp  aww-web.cpp  aww.cpp  aww.hpp
tests/: CMakeLists.txt  dummy.cpp  test-aww-api.cpp  test-aww-common--aww-Result.cpp  test-aww-common--aww-date.cpp  test-aww-common--aww-string.cpp  test-aww-common-aww-string.cpp  test-aww-create.cpp  test-aww-date.cpp  test-aww-git-open.cpp  test-aww-guid.cpp  test-aww-open.cpp  test-aww-tag.cpp  test-aww-web.cpp
